<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    >

    <item android:id="@+id/type"
        android:orderInCategory="1"
        android:title="@string/sort_popular"
        app:showAsAction="collapseActionView"

        />
    <item android:id="@+id/type2"
        android:orderInCategory="2"
        android:title="@string/sort_top"
        />

    <item
        android:id="@+id/type4"
        android:orderInCategory="3"
        android:title="@string/sort_now"
        app:showAsAction="collapseActionView"

        />
    <item
        android:id="@+id/type5"
        android:orderInCategory="4"
        android:title="@string/sort_upcoming" />

    <item
        android:id="@+id/type3"
        android:orderInCategory="5"
        android:title="@string/sort_fav" />


</menu>